Minor changes to index.html and added C# jpg file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <tr>
               <td><a href="images/alarga.pdf">Alarga - Awarded The Alarga Scholarship 2011</a></td>
             <tr>
-              <td><a href="images/DEV204xCSharp.pdf" target="_blank">EdX - C# Programming course</a></td>
+              <td><a href="images/DEV204xCSharp.jpg" target="_blank">EdX - C# Programming course</a></td>
             </tr>
             <tr>
               <td><a href="images/ISTQB-Certificate.pdf" target="_blank">ISTQB - Foundation Certificate</a></td>
@@ -132,7 +132,7 @@
               <td class="date">16.11.2015 -<br>10.07.2020</td>
               <td>
                 <h5 class="experience">Test Engineer</h5>
-                <p class="experience">Kongsberg Maritime / Digital</p>
+                <p class="experience"><i>Kongsberg Maritime / Kongsberg Digital</i></p>
                 <ul>
                   <li>Manage and perform software tests of main and maintenance releases.</li>
                   <li>Prepare, maintain, develope and perform different test strategies.</li>
@@ -149,7 +149,7 @@
               <td class="date">03.06.2013 -<br>01.11.2015</td>
               <td>
                 <h5 class="experience">Chemical Engineer</h5>
-                <p class="experience">Kongsberg Oil & Gas</p>
+                <p class="experience"><i>Kongsberg Oil & Gas</i></p>
                 <ul>
                   <li>Worked on various projects based on dynamic simulation of oilplatforms.</li>
                   <li>Experience in modelling whole chemical processes.</li>
@@ -174,8 +174,8 @@
             <tr>
               <td class="date">01.08.2011 - <br>01.06.2013</td>
               <td>
-                <h5>M.Sc Process Technology</h5>
-                <p>USN - Porsgrunn</p>
+                <h5 class="education">M.Sc Process Technology</h5>
+                <p class="education"> <i>USN - Porsgrunn</i></p>
               </td>
             </tr>
           </table>
@@ -185,8 +185,8 @@
             <tr>
               <td class="date">01.08.2008 - <br>01.06.2011</td>
               <td>
-                <h5>Bs.C Gas and Energy Technology</h5>
-                <p>USN - Porsgrunn</p>
+                <h5 class="education">Bs.C Gas and Energy Technology</h5>
+                <p class="education"><i>USN - Porsgrunn</i></p>
               </td>
             </tr>
           </table>
@@ -195,5 +195,4 @@
     </div>
   </div>
 </body>
-
 </html>
