Corrected typo in DEV204XCSharp.jpg ref in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <tr>
               <td><a href="images/alarga.pdf">Alarga - Awarded The Alarga Scholarship 2011</a></td>
             <tr>
-              <td><a href="images/DEV204xCSharp.jpg" target="_blank">EdX - C# Programming course</a></td>
+              <td><a href="images/DEV204XCSharp.jpg" target="_blank">EdX - C# Programming course</a></td>
             </tr>
             <tr>
               <td><a href="images/ISTQB-Certificate.pdf" target="_blank">ISTQB - Foundation Certificate</a></td>
