updated alarga link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h3>Awards, Courses & Certifications</h3>
           <table id="AwardsCoursesCertifications">
             <tr>
-              <td><a href="images/alarga.pdf">Alarga - Awarded The Alarga Scholarship 2011</a></td>
+              <td><a href="images/AlargaStip.png">Alarga - Awarded The Alarga Scholarship 2011</a></td>
             <tr>
               <td><a href="images/DEV204XCSharp.jpg" target="_blank">EdX - C# Programming course</a></td>
             </tr>
